Example/GTNetWork/GTNetWorkConstants.h
//
//  GTConstants.h
//  GTNetWork
//
//  Created by 郭通 on 17/1/10.
//  Copyright © 2017年 郭通. All rights reserved.
//

#import <Foundation/Foundation.h>

@interface GTNetWorkConstants : NSObject

// error
extern NSInteger const kDMErrorNormalCode;
extern NSString* const kDMErrorUserInfoMsgKey;
extern NSString* const kDMErrorUserInfoMsgCode;

@end
